@@ -11,6 +11,7 @@
     Used in "ck list_kernel_functions misc".
   * improved recaching of repos (taking latest updates from .ckr.json into account)
   * blocked copying of repositories to avoid duplication of CK entries
+  * added "ck python_version" to print Python version used by CK
 
 * V1.9.4
   * fixed minor bug when searching repo by UID when repo doesn't exist
